<resources>
    <string name="app_name">Hellocal</string>
    <string name="title_activity_login">Hellocal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_list">ListActivity</string>
    <string name="ic_logodesc">The logo of the application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="signed_out">Signed out</string>
    <string name="log_in">Log in</string>
    <string name="log_in_android">Google sign in</string>
    <string name="log_out">Log out</string>

    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="alert_loading">Loading…</string>

    <string name="type_msg">Type message</string>
    <string name="delivered_text">Delivered</string>
    <string name="sending_text">Sending…</string>
    <string name="failed_text">Failed</string>

    <string-array name="people_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Undefined</item>
    </string-array>
    <string-array name="type_array">
        <item>No preference</item>
        <item>Active</item>
        <item>Culture</item>
        <item>City</item>
        <item>Else</item>

    </string-array>

    <string-array name="transport_array">
        <item>No preference</item>
        <item>Own transport</item>
        <item>Guides transport</item>
        <item>No transport</item>

    </string-array>

    <string-array name="language_array">
        <item>No preference</item>
        <item>English</item>
        <item>Dutch</item>
        <item>French</item>
        <item>German</item>

    </string-array>

    <string-array name="countries_array">
        <item>Belgium</item>
        <item>France</item>
        <item>Germany</item>
        <item>The Netherlands</item>

    </string-array>

    <string name="imagePhoto">Photo of guide.</string>
    <string name="George">George</string>
    <string name="Gent">Gent</string>
    <string name="Belgium">Belgium</string>
    <string name="reviews">5 reviews</string>
    <string name="price">€10/h</string>
    <string name="testje">testje</string>
    <string name="bio">Bio</string>
    <string name="nobio">This user has no bio yet.</string>
    <string name="book">BOOK GEORGE</string>
    <string name="contact">CONTACT GEORGE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
