<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayoutsz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imagePhoto"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/ic_menu_camera"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imagePhoto"/>




        <LinearLayout
            android:id="@+id/LinearLayoutsz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="@dimen/pad_20dp"
            android:paddingEnd="@dimen/pad_20dp"
            android:paddingStart="@dimen/pad_20dp"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:id="@+id/LinearLayoutsz3"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/George"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textViewCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gent"
                    />

                <TextView
                    android:id="@+id/textViewCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Belgium"
                    />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutsz4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:id="@+id/ratingBar"
                    style = "?android:attr/ratingBarStyleSmall"
                    android:numStars = "5"
                    android:rating   = "4"
                    />

                <TextView
                    android:id="@+id/textViewReviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    />

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    />



            </LinearLayout>

        </LinearLayout>




<HorizontalScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="@dimen/pad_10dp"
    >

    <LinearLayout
        android:id="@+id/LinearLayoutsz5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"

        >
    <ImageView
        android:id="@+id/imageIcon1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="@dimen/pad_20dp"
        android:contentDescription="@string/testje"/>
    <ImageView
        android:id="@+id/imageIcon2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/testje"/>
    <ImageView
        android:id="@+id/imageIcon3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/testje"/>
    <ImageView
        android:id="@+id/imageIcon4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/testje"/>
    <ImageView
        android:id="@+id/imageIcon5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/testje"/>
    <ImageView
        android:id="@+id/imageIconLang1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/testje"/>
        <ImageView
        android:id="@+id/imageIconLang2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu_camera"
        android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/testje"/>
        <ImageView
            android:id="@+id/imageIconLang3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/testje"/>
        <ImageView
            android:id="@+id/imageIconLang4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/testje"/>
        <ImageView
            android:id="@+id/imageIconLang5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/testje"/>
        <ImageView
            android:id="@+id/imageIconLang6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/testje"/>
        <ImageView
            android:id="@+id/imageIconLang7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/testje"/>


    </LinearLayout>

</HorizontalScrollView>





        <TextView
            android:id="@+id/textViewBioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/bio"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:id="@+id/textViewBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nobio"
            />

        <Button
            android:layout_marginTop="20dp"
            android:text="@string/book"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:id="@+id/btnBook"

            android:layout_width="350dp"

            android:background="#02D31C"
           />

        <Button
            android:layout_marginTop="20dp"
            android:text="@string/contact"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:id="@+id/btnContact"

            android:layout_width="350dp"

            android:background="#02D31C"/>

    </LinearLayout>

</ScrollView>